--- a/Daijoubu/Daijoubu/Daijoubu.csproj
+++ b/Daijoubu/Daijoubu/Daijoubu.csproj
@@ -70,6 +70,9 @@
     <Compile Include="AppPages\ProfilePages\AssesmentPage.xaml.cs">
       <DependentUpon>AssesmentPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AppPages\ProfilePages\AssesmentPageN4.xaml.cs">
+      <DependentUpon>AssesmentPageN4.xaml</DependentUpon>
+    </Compile>
     <Compile Include="AppPages\QuizPage.xaml.cs">
       <DependentUpon>QuizPage.xaml</DependentUpon>
     </Compile>
@@ -283,6 +286,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="AppPages\QuizPages\MultipleChoicePageN4.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="AppPages\ProfilePages\AssesmentPageN4.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
