--- a/Daijoubu/Daijoubu/Daijoubu.csproj
+++ b/Daijoubu/Daijoubu/Daijoubu.csproj
@@ -73,6 +73,12 @@
     <Compile Include="AppPages\ProfilePages\AssesmentPageN4.xaml.cs">
       <DependentUpon>AssesmentPageN4.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AppPages\ProfilePages\JLPTN4SelectorPage.xaml.cs">
+      <DependentUpon>JLPTN4SelectorPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AppPages\ProfilePages\JLPTN5SelectorPage.xaml.cs">
+      <DependentUpon>JLPTN5SelectorPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="AppPages\QuizPage.xaml.cs">
       <DependentUpon>QuizPage.xaml</DependentUpon>
     </Compile>
@@ -292,6 +298,18 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="AppPages\ProfilePages\AssesmentPageN4.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="AppPages\ProfilePages\JLPTN5SelectorPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="AppPages\ProfilePages\JLPTN4SelectorPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
