--- a/Daijoubu/Daijoubu/Daijoubu.csproj
+++ b/Daijoubu/Daijoubu/Daijoubu.csproj
@@ -39,6 +39,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AppControls\ThisApp.cs" />
     <Compile Include="AppLibrary\Card.cs" />
     <Compile Include="AppLibrary\CardAssesment.cs" />
     <Compile Include="AppLibrary\Categories.cs" />
