--- a/Daijoubu/Daijoubu/Daijoubu.csproj
+++ b/Daijoubu/Daijoubu/Daijoubu.csproj
@@ -118,6 +118,9 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AppControls\Settings.cs" />
+    <Compile Include="SideMenuItems.xaml.cs">
+      <DependentUpon>SideMenuItems.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SideMenuPage.xaml.cs">
       <DependentUpon>SideMenuPage.xaml</DependentUpon>
     </Compile>
@@ -303,6 +306,12 @@
   <ItemGroup>
     <EmbeddedResource Include="AppPages\ProfilePages\JLPTN4SelectorPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SideMenuItems.xaml">
+      <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
