--- a/Daijoubu/Daijoubu.Droid/Properties/AndroidManifest.xml
+++ b/Daijoubu/Daijoubu.Droid/Properties/AndroidManifest.xml
@@ -1,9 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="16" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.VIBRATE" />
-	<application android:label="Daijoubu Droid"
-               android:hardwareAccelerated="false"
-               android:largeHeap="true"></application>
+	<application android:label="Daijoubu Droid"></application> 
 </manifest>
